--- a/foundations/02-class-id-selectors/styles.css
+++ b/foundations/02-class-id-selectors/styles.css
@@ -3,6 +3,23 @@
     font-size: 36px;
 }
 
+#ID-2 {
+    background-color: lightgreen;
+    font-size: 24px;
+    font-weight: bold;
+}
+
+
 .odd {
     background-color: pink;
+}
+
+.cool {
+    font-size: 24px;
+}
+
+.odd,
+.cool {
+    background-color: pink;
+    font-size: 24px;
 }
