--- a/foundations/06-cascade-fix/style.css
+++ b/foundations/06-cascade-fix/style.css
@@ -2,28 +2,24 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.para,
-.small-para {
+.para, .small-para, .div.text {
   color: hsl(0, 0%, 0%);
   font-weight: 800;
+  font-size: 22px;
 }
 
 .small-para {
   font-size: 14px;
-  font-weight: 800;
-}
-
-.para {
-  font-size: 22px;
 }
 
 .confirm {
   background: green;
   color: white;
   font-weight: bold;
+  font-size: 20px;
 } 
 
-.button {
+.cancel {
   background-color: rgb(255, 255, 255);
   color: rgb(0, 0, 0);
   font-size: 20px;
@@ -35,7 +31,7 @@ body {
   font-size: 14px;
 }
 
-div.text {
+.div.text {
   color: rgb(0, 0, 0);
   font-size: 22px;
   font-weight: 100;
